--- a/css/app.css
+++ b/css/app.css
@@ -1,35 +1,52 @@
 header {
-    background-color: #bebebe;
+    background-color: #ffffffcf; /* Fondo azul */
     color: #fff;
     padding: 20px;
+    border-bottom: 2px solid black;  
 }
 
-.barra_navegacion {
-    text-align: right; /* Alinea los enlaces a la derecha */
-}
-
-.barra_navegacion a {
-    display: inline-block; /* Hace que los enlaces se muestren en línea */
-    margin-left: 20px; /* Espacio entre los enlaces */
-    color: #000; /* Color del texto */
-    text-decoration: none; /* Quita el subrayado predeterminado */
-    position: relative; /* Añade posición relativa para el efecto de línea */
-}
-
-.barra_navegacion a:hover::after {
-    content: ''; /* Agrega contenido pseudo-elemento */
-    position: absolute; /* Posiciona el pseudo-elemento */
-    left: 0; /* Alinea el pseudo-elemento con el enlace */
-    bottom: -2px; /* Desplaza la línea ligeramente hacia abajo */
-    width: 100%; /* Establece el ancho del pseudo-elemento */
-    height: 2px; /* Grosor de la línea */
-    background-color: #000; /* Color de la línea */
+.indice {
+    display: flex; /* Utiliza flexbox para alinear los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+    justify-content: space-between; /* Distribuye los elementos a los extremos del contenedor */
 }
 
 .img_logo {
-    width: 100px; /* Cambia el ancho de la imagen */
+    width: 50px; /* Cambia el ancho de la imagen */
     height: auto; /* Mantiene la proporción original de la imagen */
 }
+
+.buscador {
+    display: flex; /* Utiliza flexbox para alinear los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+}
+
+#buscador {
+    margin-left: auto; /* Empuja el buscador hacia la derecha */
+}
+
+#buscador legend {
+    display: none;
+}
+
+#buscador fieldset {
+    border: none;
+    margin-left: 20px; /* Espacio entre el buscador y otros elementos */
+}
+
+#buscador input[type="text"] {
+    height: 30px; /* Ajusta la altura del campo de búsqueda */
+    font-size: 16px; /* Ajusta el tamaño de letra del texto dentro del campo de búsqueda */
+}
+
+#buscador input[type="submit"] {
+    height: 34px;
+    font-size: 16px; /* Ajusta el tamaño de letra del botón de búsqueda */
+}
+
+
+
+
 
 /* --------------------------------------------------------------- */
 
@@ -42,6 +59,7 @@ header {
 .columna1 {
     width: 18%; /* Tamaño de la primera columna */
     background-color: #d6d6d6; /* Color de fondo para la primera columna */
+    color: #0066b3;
 }
 
 .columna2 {
@@ -62,10 +80,12 @@ header {
 .productos {
     list-style: none; /* Quita los estilos de la lista */
     padding: 0; /* Elimina el relleno de la lista */
+    
 }
 
 .productos li {
     padding: 10px; /* Espacio interno de cada elemento de la lista */
+    border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .productos li a {
@@ -77,10 +97,6 @@ header {
     background-color: rgb(188, 188, 188); /* Cambia el color de fondo cuando se pasa el ratón */
 }
 
-.productos li a:hover {
-    color: white; /* Cambia el color del texto cuando se pasa el ratón */
-}
-
 .soluciones {
     list-style: none; /* Quita los estilos de la lista */
     padding: 0; /* Elimina el relleno de la lista */
@@ -88,6 +104,7 @@ header {
 
 .soluciones li {
     padding: 10px; /* Espacio interno de cada elemento de la lista */
+    border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .soluciones li a {
@@ -106,9 +123,62 @@ header {
 
 .libreria li {
     padding: 10px; /* Espacio interno de cada elemento de la lista */
+    border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .libreria li a {
     text-decoration: none; /* Quita el subrayado de los enlaces */
     color: black; /* Color del texto */
 }
+
+.libreria li:hover {
+    background-color: rgb(188, 188, 188); /* Cambia el color de fondo cuando se pasa el ratón */
+}
+
+
+/* Barra de navegacion columna 2 */
+
+    #barra_navegacion {
+    padding: 0 0 0 0;
+}
+  
+  #barra_navegacion ul {
+    margin: 0 10px;
+    padding: 0;
+    list-style: none;
+  }
+  
+  #barra_navegacion ul li {
+    margin: 0 5px 0 0;
+    padding: 0;
+  
+  }
+  
+  #barra_navegacion ul li a {
+    display: block;
+    position: relative;
+    padding: 5px 15px;
+    background: #d6d6d6;
+    color: #0066b3;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  #barra_navegacion ul li a:hover {
+    background-color: rgb(188, 188, 188);
+  }
+  
+  #barra_navegacion ul li.seleccionado a {
+    background: #94bdff;
+    color: #ffffff;
+  }
+
+  /*Contenido pagina principal*/
+
+  .titulo_principal{
+    text-align: center;
+    color: #0066b3;
+  }
+
+
