--- a/css/app.css
+++ b/css/app.css
@@ -181,4 +181,72 @@ header {
     color: #0066b3;
   }
 
+  .titulo_secundario{
+    color: #0066b3;
+  }
+
+  .imagen1{
+    width: 350px; /* Cambia el ancho de la imagen */
+    height: auto;
+
+  }
+  .imagen1 {
+    float: left; /* Hace que la imagen flote a la izquierda */
+    margin-right: 20px; /* Espacio entre la imagen y el texto */
+    margin-bottom: 20px; /* Espacio debajo de la imagen */
+}
+
+.imagen2{
+    width: 350px; /* Cambia el ancho de la imagen */
+    height: auto;
+    
+  }
+  .contenedor {
+    display: flex; /* Utiliza flexbox para alinear los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+}
+
+.imagen2{
+    margin-right: 20px;
+}
+
+.t1 {
+    flex-grow: 1; /* Hace que el texto ocupe todo el espacio restante */
+}
+
+/* footer ---------------------------------------------------------*/
+
+footer {
+    background-color: #ffffffcf; /* Fondo azul */
+    color: #000000;
+    padding: 20px;
+    border-top: 2px solid black;  
+}
+
+.contenedor {
+    display: flex; /* Utiliza flexbox */
+    text-align: right;
+}
+
+.footer-navegacion {
+    flex-grow: 1; /* Hace que los elementos ocupen todo el espacio disponible */
+    margin: 0 10px; /* Margen entre las barras de navegación */
+}
+
+.footer-navegacion h3 {
+    margin-bottom: 10px; /* Espacio debajo del título */
+}
+
+.navegacion a {
+    display: block; /* Hace que los enlaces sean bloques para que ocupen el ancho completo */
+    margin-bottom: 5px; /* Espacio entre los enlaces */
+    text-decoration: none; /* Quita el subrayado predeterminado */
+    color: #000; /* Color del texto */
+}
+
+.navegacion a:hover {
+    text-decoration: underline; /* Subraya los enlaces al pasar el cursor sobre ellos */
+}
+
+
 
