--- a/css/app.css
+++ b/css/app.css
@@ -1,28 +1,37 @@
 header {
-    background-color: #ffffffcf; /* Fondo azul */
+    background-color: #ffffffcf;
+    /* Fondo azul */
     color: #fff;
     padding: 20px;
-    border-bottom: 2px solid rgb(157, 157, 157);  
+    border-bottom: 2px solid rgb(157, 157, 157);
 }
 
 .indice {
-    display: flex; /* Utiliza flexbox para alinear los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-    justify-content: space-between; /* Distribuye los elementos a los extremos del contenedor */
+    display: flex;
+    /* Utiliza flexbox para alinear los elementos */
+    align-items: center;
+    /* Centra verticalmente los elementos */
+    justify-content: space-between;
+    /* Distribuye los elementos a los extremos del contenedor */
 }
 
 .img_logo {
-    width: 125px; /* Cambia el ancho de la imagen */
-    height: auto; /* Mantiene la proporción original de la imagen */
+    width: 125px;
+    /* Cambia el ancho de la imagen */
+    height: auto;
+    /* Mantiene la proporción original de la imagen */
 }
 
 .buscador {
-    display: flex; /* Utiliza flexbox para alinear los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
+    display: flex;
+    /* Utiliza flexbox para alinear los elementos */
+    align-items: center;
+    /* Centra verticalmente los elementos */
 }
 
 #buscador {
-    margin-left: auto; /* Empuja el buscador hacia la derecha */
+    margin-left: auto;
+    /* Empuja el buscador hacia la derecha */
 }
 
 #buscador legend {
@@ -31,17 +40,21 @@ header {
 
 #buscador fieldset {
     border: none;
-    margin-left: 20px; /* Espacio entre el buscador y otros elementos */
+    margin-left: 20px;
+    /* Espacio entre el buscador y otros elementos */
 }
 
 #buscador input[type="text"] {
-    height: 30px; /* Ajusta la altura del campo de búsqueda */
-    font-size: 16px; /* Ajusta el tamaño de letra del texto dentro del campo de búsqueda */
+    height: 30px;
+    /* Ajusta la altura del campo de búsqueda */
+    font-size: 16px;
+    /* Ajusta el tamaño de letra del texto dentro del campo de búsqueda */
 }
 
 #buscador input[type="submit"] {
     height: 34px;
-    font-size: 16px; /* Ajusta el tamaño de letra del botón de búsqueda */
+    font-size: 16px;
+    /* Ajusta el tamaño de letra del botón de búsqueda */
 }
 
 
@@ -51,112 +64,136 @@ header {
 /* --------------------------------------------------------------- */
 
 .principal {
-    display: flex; /* Utilizamos flexbox para alinear las columnas */
-    justify-content: space-between;/* Distribuye las columnas uniformemente en el contenedor */
-    padding: 10px;    
+    display: flex;
+    /* Utilizamos flexbox para alinear las columnas */
+    justify-content: space-between;
+    /* Distribuye las columnas uniformemente en el contenedor */
+    padding: 10px;
 }
 
 /* Division de la pagina en 3 columnas*/
 .columna1 {
-    width: 18%; /* Tamaño de la primera columna */
-    background-color: #d6d6d6; /* Color de fondo para la primera columna */
+    width: 18%;
+    /* Tamaño de la primera columna */
+    background-color: #d6d6d6;
+    /* Color de fondo para la primera columna */
     color: #0066b3;
 }
 
 .columna2 {
-    width: 60%; /* Tamaño de la segunda columna */
-    background-color: #ffffff; /* Color de fondo para la segunda columna */
+    width: 60%;
+    /* Tamaño de la segunda columna */
+    background-color: #ffffff;
+    /* Color de fondo para la segunda columna */
 }
 
 .columna3 {
-    width: 18%; /* Tamaño de la tercera columna */
-    background-color: #d6d6d6; /* Color de fondo para la tercera columna */
+    width: 18%;
+    /* Tamaño de la tercera columna */
+    background-color: #d6d6d6;
+    /* Color de fondo para la tercera columna */
 }
 
-.titulo_columna1{
+.titulo_columna1 {
     text-align: center;
     font-size: 18px;
 }
 
 /* Primera columna (izd) */
 .productos {
-    list-style: none; /* Quita los estilos de la lista */
-    padding: 0; /* Elimina el relleno de la lista */
-    
+    list-style: none;
+    /* Quita los estilos de la lista */
+    padding: 0;
+    /* Elimina el relleno de la lista */
+
 }
 
 .productos li {
-    padding: 10px; /* Espacio interno de cada elemento de la lista */
+    padding: 10px;
+    /* Espacio interno de cada elemento de la lista */
     border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .productos li a {
-    text-decoration: none; /* Quita el subrayado de los enlaces */
-    color: black; /* Color del texto */
+    text-decoration: none;
+    /* Quita el subrayado de los enlaces */
+    color: black;
+    /* Color del texto */
 }
 
 .productos li:hover {
-    background-color: rgb(188, 188, 188); /* Cambia el color de fondo cuando se pasa el ratón */
+    background-color: rgb(188, 188, 188);
+    /* Cambia el color de fondo cuando se pasa el ratón */
 }
 
 .soluciones {
-    list-style: none; /* Quita los estilos de la lista */
-    padding: 0; /* Elimina el relleno de la lista */
+    list-style: none;
+    /* Quita los estilos de la lista */
+    padding: 0;
+    /* Elimina el relleno de la lista */
 }
 
 .soluciones li {
-    padding: 10px; /* Espacio interno de cada elemento de la lista */
+    padding: 10px;
+    /* Espacio interno de cada elemento de la lista */
     border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .soluciones li a {
-    text-decoration: none; /* Quita el subrayado de los enlaces */
-    color: black; /* Color del texto */
+    text-decoration: none;
+    color: black;
 }
 
 .soluciones li:hover {
-    background-color: rgb(188, 188, 188); /* Cambia el color de fondo cuando se pasa el ratón */
+    background-color: rgb(188, 188, 188);
+    /* Cambia el color de fondo cuando se pasa el ratón */
 }
 
 .libreria {
-    list-style: none; /* Quita los estilos de la lista */
-    padding: 0; /* Elimina el relleno de la lista */
+    list-style: none;
+    /* Quita los estilos de la lista */
+    padding: 0;
+    /* Elimina el relleno de la lista */
 }
 
 .libreria li {
-    padding: 10px; /* Espacio interno de cada elemento de la lista */
+    padding: 10px;
+    /* Espacio interno de cada elemento de la lista */
     border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .libreria li a {
-    text-decoration: none; /* Quita el subrayado de los enlaces */
-    color: black; /* Color del texto */
+    text-decoration: none;
+    /* Quita el subrayado de los enlaces */
+    color: black;
+    /* Color del texto */
 }
 
 .libreria li:hover {
-    background-color: rgb(188, 188, 188); /* Cambia el color de fondo cuando se pasa el ratón */
+    background-color: rgb(188, 188, 188);
+    /* Cambia el color de fondo cuando se pasa el ratón */
 }
 
 
 /* Barra de navegacion columna 2 */
 
-    #barra_navegacion {
+#barra_navegacion {
     padding: 0 0 0 0;
 }
-  
-  #barra_navegacion ul {
+
+#barra_navegacion ul {
     margin: 0 10px;
     padding: 0;
     list-style: none;
-  }
-  
-  #barra_navegacion ul li {
+}
+
+#barra_navegacion ul li {
     margin: 0 5px 0 0;
     padding: 0;
-  
-  }
-  
-  #barra_navegacion ul li a {
+
+}
+
+#barra_navegacion ul li a {
     display: block;
     position: relative;
     padding: 5px 15px;
@@ -165,109 +202,150 @@ header {
     font-weight: bold;
     text-decoration: none;
     cursor: pointer;
-  }
-  
-  #barra_navegacion ul li a:hover {
+}
+
+#barra_navegacion ul li a:hover {
     background-color: rgb(188, 188, 188);
-  }
-  
-  #barra_navegacion ul li.seleccionado a {
+}
+
+#barra_navegacion ul li.seleccionado a {
     background: #94bdff;
     color: #ffffff;
-  }
+}
 
-  /*Contenido pagina principal*/
+/*Contenido pagina principal*/
 
-  .titulo_principal{
+.titulo_principal {
     text-align: center;
     color: #0066b3;
-  }
+}
 
-  .titulo_secundario{
+.titulo_secundario {
     color: #0066b3;
-  }
-
-  .imagen1{
-    width: 350px; /* Cambia el ancho de la imagen */
-    height: auto;
-
-  }
-  .imagen1 {
-    float: left; /* Hace que la imagen flote a la izquierda */
-    margin-right: 20px; /* Espacio entre la imagen y el texto */
-    margin-bottom: 20px; /* Espacio debajo de la imagen */
 }
 
-.imagen2{
-    width: 350px; /* Cambia el ancho de la imagen */
+.imagen1 {
+    width: 350px;
+    /* Cambia el ancho de la imagen */
     height: auto;
-    
-  }
-  .contenedor {
-    display: flex; /* Utiliza flexbox para alinear los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
+
 }
 
-.imagen2{
+.imagen1 {
+    float: left;
+    /* Hace que la imagen flote a la izquierda */
+    margin-right: 20px;
+    /* Espacio entre la imagen y el texto */
+    margin-bottom: 20px;
+    /* Espacio debajo de la imagen */
+}
+
+.imagen2 {
+    width: 350px;
+    /* Cambia el ancho de la imagen */
+    height: auto;
+    float: right;
+
+}
+
+.contenedor {
+    display: flex;
+
+    align-items: center;
+
+}
+
+.imagen2 {
     margin-right: 20px;
 }
 
 .t1 {
-    flex-grow: 1; /* Hace que el texto ocupe todo el espacio restante */
+    flex-grow: 1;
 }
 
-/* footer ---------------------------------------------------------*/
+/* -----------------------------footer ---------------------------------------------------------*/
 
 footer {
-    background-color: #ffffffcf; /* Fondo azul */
-    color: #000000;
+    
+    clear: both;
+    background-color: #959595;
+    color: #fff;
+    width: 100%;
+    box-sizing: border-box;
+    left: 0;
+    bottom: 0;
     padding: 20px;
-    border-top: 2px solid rgb(157, 157, 157);   
+    font-size: 12px;
 }
 
-.contenedor {
-    display: flex; /* Utiliza flexbox */
-    text-align: right;
-}
 
-.footer-navegacion {
-    flex-grow: 1; /* Hace que los elementos ocupen todo el espacio disponible */
-    margin: 0 10px; /* Margen entre las barras de navegación */
+.footer-flex {
+    display: flex;
+    justify-content: space-between;
 }
-
-.footer-navegacion h3 {
-    margin-bottom: 10px; /* Espacio debajo del título */
-}
-
-.navegacion a {
-    display: block; /* Hace que los enlaces sean bloques para que ocupen el ancho completo */
-    margin-bottom: 5px; /* Espacio entre los enlaces */
-    text-decoration: none; /* Quita el subrayado predeterminado */
-    color: #000; /* Color del texto */
-}
-
-.navegacion a:hover {
-    text-decoration: underline; /* Subraya los enlaces al pasar el cursor sobre ellos */
-}
-
 
 .ubicacion {
     float: left;
-    display: flex; /* Utiliza flexbox para alinear los elementos */
-    flex-direction: column; /* Alinea los elementos en una columna */
-    align-items: flex-start; /* Alinea los elementos a la izquierda */
 }
 
-#dondeestamos {
-    margin-bottom: 10px; /* Espacio entre el encabezado y el mapa */
+.footer-navegacion {
+    float: left;
 }
-   
+
+.footer-navegacion .navegacion {
+    margin-top: 20px;
     
 
-#mapa {
-   
-    width: 300px;
+}
+
+.footer-navegacion h3 {
+    margin-bottom: 10px;
+
+}
+
+footer .copyright {
+    clear: both;
+
 }
 
 
+#mapa {
+    width: 180px;
 
+    height: 120px;
+
+}
+
+
+#copyright {
+    text-align: center;
+    border-top: 3px solid rgb(255, 255, 255);
+    margin: 1%;
+    font-size: 12px;
+}
+
+.soporte {
+    list-style: none;
+    /* Quita los estilos de la lista */
+    padding: 0;
+    /* Elimina el relleno de la lista */
+
+}
+
+.soporte li {
+    padding: 10px;
+    /* Espacio interno de cada elemento de la lista */
+    border-bottom: 1px solid rgb(190, 190, 190);
+}
+
+.soporte li a {
+    text-decoration: none;
+    /* Quita el subrayado de los enlaces */
+    color: rgb(255, 255, 255);
+    /* Color del texto */
+}
+
+.soporte li:hover {
+    background-color: rgb(188, 188, 188);
+    /* Cambia el color de fondo cuando se pasa el ratón */
+}
