pagina principal ultimo commit

--- a/css/app.css
+++ b/css/app.css
@@ -263,6 +263,37 @@ header {
     flex-grow: 1;
 }
 
+/*------------columna derecha----------------------*/
+.titulo_preguntas{
+    color: #0066b3;
+    text-align: center;
+}
+.preguntas {
+    list-style: none;
+    /* Quita los estilos de la lista */
+    padding: 0;
+    /* Elimina el relleno de la lista */
+
+}
+
+.preguntas li {
+    padding: 10px;
+    /* Espacio interno de cada elemento de la lista */
+    border-bottom: 1px solid rgb(190, 190, 190);
+}
+
+.preguntas li a {
+    text-decoration: none;
+    /* Quita el subrayado de los enlaces */
+    color: black;
+    /* Color del texto */
+}
+
+.preguntas li:hover {
+    background-color: rgb(188, 188, 188);
+    /* Cambia el color de fondo cuando se pasa el ratón */
+}
+
 /* -----------------------------footer ---------------------------------------------------------*/
 
 
@@ -299,6 +330,7 @@ footer .copyright {
     clear: both;
 
 }
+
 
 #mapa {
     width: 180px;
